agrega parrafos y imagenes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html>
 
 <body>
-    <h1>
-        este es mi primer after
-    </h1>
+    <title>
+        ELECTRONICS ARG!
+    </title>
 
+    <h1>
+        ELECTRODOMESTICOS Y MAS, TODO LO QUE NECESITAS SABER!
+    </h1>
+    
     <h2>
-        este es mi prmier after
+        No busques mas, aca tenemos toda la información que necesitas sobre los productos que buscas!
     </h2>
+
+    <p>
+        LAVARROPAS AUTOMATICO DREAN!
+    </p>
+    <img src="img/producto_826_9057.png" alt="LAVARROPAS AUTOMATICO"> <img src="img/producto_826_17246.png" alt="LAVARROPAS AUTOMATICO">
+
+    <p>
+        Características generales
+Tipo de carga Frontal // Capacidad de lavado
+De 5 a 7 Kg // Velocidad de centrifugado 900 RPM // Carga máxima 6 Kg // Color Blanco // Material del tambor
+Acero Inoxidable // Garantía 12 Meses!
+    </p>
 </body>
 </html>
