--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <body>
-    <title>
-        ELECTRONICS ARG!
-    </title>
+    <head>
+        <title> ELECTRONCICS ARG</title>
+    </head>
 
     <h1>
         ELECTRODOMESTICOS Y MAS, TODO LO QUE NECESITAS SABER!
